JPA Finder example advanced.